--- a/In-Class Jupyter Notebooks/Python file access.ipynb
+++ b/In-Class Jupyter Notebooks/Python file access.ipynb
@@ -30,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "﻿The Project Gutenberg EBook of First Gutenberg Collection of Edgar Allan\n",
+      "The Project Gutenberg EBook of First Gutenberg Collection of Edgar Allan\n",
       "\n"
      ]
     }
@@ -39,7 +39,7 @@
     "f = open(\"pg1062.txt\")\n",
     "textline = f.readline()\n",
     "print(textline)\n",
-    "f.close()\n"
+    "f.close()"
    ]
   },
   {
@@ -64,7 +64,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "﻿The Project Gutenberg EBook of First Gutenberg Collection of Edgar Allan\n",
+      "The Project Gutenberg EBook of First Gutenberg Collection of Edgar Allan\n",
       "\n",
       "Poe, by Edgar Allan Poe\n",
       "\n",
@@ -93,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "﻿The Project Gutenberg EBook of First Gutenberg Collection of Edgar Allan\n",
+      "The Project Gutenberg EBook of First Gutenberg Collection of Edgar Allan\n",
       "\n",
       "Poe, by Edgar Allan Poe\n",
       "\n",
@@ -112,7 +112,7 @@
       "\n",
       "re-use it under the terms of the Project Gutenberg License included\n",
       "\n",
-      "with this eBook or online at www.gutenberg.net\n",
+      "with this eBook or online at www.gutenberg.org\n",
       "\n",
       "\n",
       "\n",
@@ -1646,7 +1646,7 @@
       "\n",
       "This and all associated files of various formats will be found in:\n",
       "\n",
-      "        http://www.gutenberg.org/1/0/6/1062/\n",
+      "        https://www.gutenberg.org/1/0/6/1062/\n",
       "\n",
       "\n",
       "\n",
@@ -1718,7 +1718,7 @@
       "\n",
       "Gutenberg-tm License (available with this file or online at\n",
       "\n",
-      "http://gutenberg.net/license).\n",
+      "https://gutenberg.org/license).\n",
       "\n",
       "\n",
       "\n",
@@ -1848,7 +1848,7 @@
       "\n",
       "re-use it under the terms of the Project Gutenberg License included\n",
       "\n",
-      "with this eBook or online at www.gutenberg.net\n",
+      "with this eBook or online at www.gutenberg.org\n",
       "\n",
       "\n",
       "\n",
@@ -1918,7 +1918,7 @@
       "\n",
       "\"Plain Vanilla ASCII\" or other format used in the official version\n",
       "\n",
-      "posted on the official Project Gutenberg-tm web site (www.gutenberg.net),\n",
+      "posted on the official Project Gutenberg-tm web site (www.gutenberg.org),\n",
       "\n",
       "you must, at no additional cost, fee or expense to the user, provide a\n",
       "\n",
@@ -2182,7 +2182,7 @@
       "\n",
       "and how your efforts and donations can help, see Sections 3 and 4\n",
       "\n",
-      "and the Foundation web page at http://www.pglaf.org.\n",
+      "and the Foundation web page at https://www.pglaf.org.\n",
       "\n",
       "\n",
       "\n",
@@ -2204,7 +2204,7 @@
       "\n",
       "number is 64-6221541.  Its 501(c)(3) letter is posted at\n",
       "\n",
-      "http://pglaf.org/fundraising.  Contributions to the Project Gutenberg\n",
+      "https://pglaf.org/fundraising.  Contributions to the Project Gutenberg\n",
       "\n",
       "Literary Archive Foundation are tax deductible to the full extent\n",
       "\n",
@@ -2224,7 +2224,7 @@
       "\n",
       "information can be found at the Foundation's web site and official\n",
       "\n",
-      "page at http://pglaf.org\n",
+      "page at https://pglaf.org\n",
       "\n",
       "\n",
       "\n",
@@ -2276,7 +2276,7 @@
       "\n",
       "SEND DONATIONS or determine the status of compliance for any\n",
       "\n",
-      "particular state visit http://pglaf.org\n",
+      "particular state visit https://pglaf.org\n",
       "\n",
       "\n",
       "\n",
@@ -2304,7 +2304,7 @@
       "\n",
       "ways including including checks, online payments and credit card\n",
       "\n",
-      "donations.  To donate, please visit: http://pglaf.org/donate\n",
+      "donations.  To donate, please visit: https://pglaf.org/donate\n",
       "\n",
       "\n",
       "\n",
@@ -2316,7 +2316,7 @@
       "\n",
       "\n",
       "\n",
-      "Professor Michael S. Hart is the originator of the Project Gutenberg-tm\n",
+      "Professor Michael S. Hart was the originator of the Project Gutenberg-tm\n",
       "\n",
       "concept of a library of electronic works that could be freely shared\n",
       "\n",
@@ -2344,7 +2344,7 @@
       "\n",
       "\n",
       "\n",
-      "     http://www.gutenberg.net\n",
+      "     https://www.gutenberg.org\n",
       "\n",
       "\n",
       "\n",
@@ -2368,6 +2368,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2382,7 +2389,7 @@
     {
      "data": {
       "text/plain": [
-       "54738"
+       "54747"
       ]
      },
      "execution_count": 4,
@@ -2425,12 +2432,34 @@
     "# Note that f is the variable in which we put the file object.\n",
     "# If I had named the file object \"bob\", it would have been \"print(..., file = bob)\"\n",
     "\n",
-    "print(\"Hello\", file=f)\n",
-    "print(\"Writing another line to the file.\", file = f)\n",
-    "print(\"Here’s a number:\", 5, file= f)\n",
+    "print(\"Привет\", file=f)\n",
+    "print(\"Меня зовут Элора.\", file = f)\n",
+    "print(\"Как вас зовут?\", file= f)\n",
     "\n",
     "# And close the file.\n",
     "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Привет\\nМеня зовут Элора.\\nКак вас зовут?\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open(\"myoutfile.txt\", \"r\")\n",
+    "\n",
+    "f.read()\n"
    ]
   },
   {
@@ -2444,7 +2473,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2458,7 +2487,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
