--- a/Homework/Introcl_homework_2.ipynb
+++ b/Homework/Introcl_homework_2.ipynb
@@ -393,21 +393,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lies below . </s> home . </s> laugh . </s> maid In man 's me To Colchis through 1.E.7 or in all her eye stood in the arrival of obtaining a great mountain 's home , to play . </s> heart Is easier watching than all the oppressed , Unknown "
+     ]
+    }
+   ],
    "source": [
     "# space for your code here\n",
-    "\n",
     "import nltk\n",
+    "from nltk.lm.preprocessing import padded_everygram_pipeline\n",
+    "from nltk.lm import MLE\n",
     "\n",
-    "the_medea = open(\"the_medea.txt\")\n",
-    "\n",
-    "medea = the_medea.read()\n",
+    "f = open(\"the_medea.txt\")\n",
+    "medea = f.read()\n",
+    "f.close()\n",
     "\n",
     "medea_sents = nltk.sent_tokenize(medea)\n",
     "\n",
-    "medea_words = nltk.word_tokenize(medea)"
+    "medea_sents_tokenized = [nltk.word_tokenize(s) for s in medea_sents]\n",
+    "\n",
+    "medea_corpus, vocab = padded_everygram_pipeline(2, medea_sents_tokenized)\n",
+    "\n",
+    "lm_medea = MLE(2)\n",
+    "\n",
+    "lm_medea.fit(medea_corpus, vocab)\n",
+    "\n",
+    "for word in lm_medea.generate(50):\n",
+    "    print(word, end = \" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I go to a play to show what `` this '' is not well thou dost , but wondrous in the United States without permission and without paying any fees or charges . </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> "
+     ]
+    }
+   ],
+   "source": [
+    "# space for your code here\n",
+    "import nltk\n",
+    "from nltk.lm.preprocessing import padded_everygram_pipeline\n",
+    "from nltk.lm import MLE\n",
+    "\n",
+    "f = open(\"the_medea.txt\")\n",
+    "medea = f.read()\n",
+    "f.close()\n",
+    "\n",
+    "medea_sents = nltk.sent_tokenize(medea)\n",
+    "\n",
+    "medea_sents_tokenized = [nltk.word_tokenize(s) for s in medea_sents]\n",
+    "\n",
+    "medea_corpus, vocab = padded_everygram_pipeline(3, medea_sents_tokenized)\n",
+    "\n",
+    "lm_medea = MLE(3)\n",
+    "\n",
+    "lm_medea.fit(medea_corpus, vocab)\n",
+    "\n",
+    "for word in lm_medea.generate(50):\n",
+    "    print(word, end = \" \")"
    ]
   },
   {
@@ -764,7 +819,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -778,7 +833,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
+   }
   }
  },
  "nbformat": 4,
