--- a/Homework/Introcl_homework_2.ipynb
+++ b/Homework/Introcl_homework_2.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        " 'there']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -393,19 +393,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lies below . </s> home . </s> laugh . </s> maid In man 's me To Colchis through 1.E.7 or in all her eye stood in the arrival of obtaining a great mountain 's home , to play . </s> heart Is easier watching than all the oppressed , Unknown "
+      ". '' </s> Made keen , pp . </s> Medea kill my house also a well-known _crux interpretum_ . </s> </s> it , an enemy and help them convenient , O Zeus , and well-wishers . </s> who canst not so that dwell upon Whom Wisdom shall be in fifth-century "
      ]
     }
    ],
    "source": [
-    "# space for your code here\n",
+    "# bigram model\n",
+    "\n",
     "import nltk\n",
     "from nltk.lm.preprocessing import padded_everygram_pipeline\n",
     "from nltk.lm import MLE\n",
@@ -430,19 +431,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I go to a play to show what `` this '' is not well thou dost , but wondrous in the United States without permission and without paying any fees or charges . </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> "
+      ", not one kinsman anywhere For harbour in this speech Medea 's wrongs to this man , what thing thou please , Tigress , not with glory but with the full terms of this scene , a sign of the children , to pleasure thee I have this plea to "
      ]
     }
    ],
    "source": [
-    "# space for your code here\n",
+    "# trigram model\n",
+    "\n",
     "import nltk\n",
     "from nltk.lm.preprocessing import padded_everygram_pipeline\n",
     "from nltk.lm import MLE\n",
@@ -505,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +525,7 @@
        " ('of', 'IN')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +560,7 @@
        "'AT'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +591,7 @@
        "'the'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,11 +626,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('NN', 13162) ('the', 6386)\n"
+     ]
+    }
+   ],
    "source": [
-    "# place your code here"
+    "# place your code here\n",
+    "import nltk\n",
+    "brown_news = nltk.corpus.brown.tagged_words(categories=\"news\")\n",
+    "\n",
+    "word_dict = {}\n",
+    "pos_dict = {}\n",
+    "\n",
+    "for tuple in brown_news:\n",
+    "    word = tuple[0].lower()\n",
+    "\n",
+    "    if word not in word_dict:\n",
+    "        word_dict[word] = 1\n",
+    "    else:\n",
+    "        word_dict[word] += 1\n",
+    "\n",
+    "for tuple in brown_news:\n",
+    "    pos = tuple[1]\n",
+    "\n",
+    "    if pos not in pos_dict:\n",
+    "        pos_dict[pos] = 1\n",
+    "    else:\n",
+    "        pos_dict[pos] += 1\n",
+    "\n",
+    "pos_dict = sorted(pos_dict.items(), key = lambda x: x[1], reverse = True)\n",
+    "\n",
+    "word_dict = sorted(word_dict.items(), key = lambda x: x[1], reverse = True)\n",
+    "\n",
+    "count = 0\n",
+    "\n",
+    "print(pos_dict[0], word_dict[0])"
    ]
   },
   {
@@ -642,11 +681,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('NN', 13162)] [('the', 6386)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# please place your code here"
+    "# please place your code here\n",
+    "import nltk\n",
+    "\n",
+    "brown_words = []\n",
+    "brown_pos = []\n",
+    "\n",
+    "for tuple in brown_news:\n",
+    "    word = tuple[0].lower()\n",
+    "    brown_words.append(word)\n",
+    "\n",
+    "for tuple in brown_news:\n",
+    "    pos = tuple[1]\n",
+    "    brown_pos.append(pos)\n",
+    "\n",
+    "word_fd = nltk.FreqDist(brown_words)\n",
+    "pos_fd = nltk.FreqDist(brown_pos)\n",
+    "\n",
+    "print(pos_fd.most_common(1), word_fd.most_common(1))"
    ]
   },
   {
@@ -662,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +735,7 @@
        "<ConditionalFreqDist with 3 conditions>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +761,7 @@
        "['a', 'b', 'c']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +782,7 @@
        "FreqDist({'X': 1, 'Y': 1})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
