--- a/Homework/Introcl_homework_2.ipynb
+++ b/Homework/Introcl_homework_2.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        " 'there']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -393,14 +393,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ". '' </s> Made keen , pp . </s> Medea kill my house also a well-known _crux interpretum_ . </s> </s> it , an enemy and help them convenient , O Zeus , and well-wishers . </s> who canst not so that dwell upon Whom Wisdom shall be in fifth-century "
+      "thy doom untold ? </s> work , even yet , such judgment pronounced on thee Hath drawn battle yet in the world . Thou wooest , ere I knew without revenge becomes unmistakable later than '' such a mere coincidence ( At draughts in such a fatal kind , Out from crown , Ye women by thy way , Pêlion . </s> . </s> verge of right leads towards the General Terms of the speeches of the obvious purpose such treaty with Project Gutenberg-tm work red With brazen bars ! </s> Grey guard man , Art or using any Defect "
      ]
     }
    ],
@@ -425,20 +425,20 @@
     "\n",
     "lm_medea.fit(medea_corpus, vocab)\n",
     "\n",
-    "for word in lm_medea.generate(50):\n",
+    "for word in lm_medea.generate(5):\n",
     "    print(word, end = \" \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ", not one kinsman anywhere For harbour in this speech Medea 's wrongs to this man , what thing thou please , Tigress , not with glory but with the full terms of this scene , a sign of the children , to pleasure thee I have this plea to "
+      "afar -- A pendant to the full Project Gutenberg-tm and future generations . </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> "
      ]
     }
    ],
@@ -471,7 +471,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*space for your text answer here*"
+    "*space for your text answer here*\n",
+    "\n",
+    "# TO-DO"
    ]
   },
   {
@@ -507,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +527,7 @@
        " ('of', 'IN')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +562,7 @@
        "'AT'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +593,7 @@
        "'the'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -665,8 +667,6 @@
     "\n",
     "word_dict = sorted(word_dict.items(), key = lambda x: x[1], reverse = True)\n",
     "\n",
-    "count = 0\n",
-    "\n",
     "print(pos_dict[0], word_dict[0])"
    ]
   },
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -897,11 +897,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
